<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/booking_image"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/brio"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_toEndOf="@+id/booking_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="HONDA BRIO"
        android:textSize="30sp"
        android:textColor="@color/orangeRent"/>

    <TextView
        android:id="@+id/tv_seat"
        android:layout_below="@+id/tv_name"
        android:layout_toEndOf="@+id/booking_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4 Seat"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tv_year"
        android:layout_toEndOf="@id/booking_image"
        android:layout_below="@+id/tv_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2010 - 2015"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/tv_driver"
        android:layout_below="@id/booking_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_service"/>

    <LinearLayout
        android:id="@+id/linear_driver"
        android:layout_below="@id/tv_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="@string/with_driver"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:text="@string/without_driver"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_transmission"
        android:layout_below="@id/linear_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_service"/>

    <LinearLayout
        android:id="@+id/linear_transmission"
        android:layout_below="@id/tv_transmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="@string/at"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mt"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_date"
        android:layout_below="@id/linear_transmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/from"
                android:layout_weight="50"
                android:textStyle="bold"
                android:textColor="@color/orangeRent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TO"
                android:layout_weight="50"
                android:textStyle="bold"
                android:textColor="@color/orangeRent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_date_start"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:hint="Stand"
                android:textSize="10sp"/>

            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/btn_date_end"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:hint="End"
                android:textSize="10sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_location"
        android:layout_below="@id/linear_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:hint="location"
        android:textSize="10sp"/>

    <ImageView
        android:id="@+id/image_invoice"
        android:layout_below="@id/btn_location"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:src="@drawable/invoice"/>

    <LinearLayout
        android:layout_below="@id/btn_location"
        android:layout_toEndOf="@id/image_invoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_estimate"
                android:layout_marginRight="60dp"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_toEndOf="@+id/tv_estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orangeRent"
                android:hint="@string/price"/>

            <TextView
                android:id="@+id/tv_hour"
                android:layout_toEndOf="@id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orangeRent"
                android:text="@string/_24_hour"/>

            <TextView
                android:id="@+id/tv_x"
                android:layout_below="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="168dp"
                android:textColor="@color/orangeRent"
                android:text="X"/>

            <TextView
                android:id="@+id/tv_days"
                android:layout_toEndOf="@+id/tv_x"
                android:layout_below="@id/tv_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/orangeRent"
                android:hint="7"/>

            <TextView
                android:layout_toEndOf="@id/tv_days"
                android:layout_below="@id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/orangeRent"
                android:text="DAYS"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/linear_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="125dp"
                android:text="@string/total"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orangeRent"
                android:text="@string/rp"
                />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orangeRent"
                android:hint="2.000.0000"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_agreement"
        android:layout_below="@+id/image_invoice"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/terms_condition"
            android:textSize="10sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_book"
        android:layout_below="@id/check_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/book_now"
        android:background="@color/orangeRent"
        android:textSize="25sp"
        android:textColor="@android:color/white"/>

</RelativeLayout>